--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,3 +1,5 @@
-<div id="sidebar">
-    Listagem
+<div id="sidebar" class="link-offset-2 link-underline link-underline-opacity-0">
+    <a [routerLink]="['/']" class="link-offset-2 link-underline link-underline-opacity-0">
+        Listagem
+    </a>
 </div>
